[dependencies]
deadpool-postgres = "0.10.5"
dotenv = "0.15.0"
fancy-regex = "0.11.0"
futures = { version = "0.3", default-features = false }
once_cell = "1.18.0"
parking_lot = "0.12.1"
time = { default-features = false, version = "0.3.22" }
thiserror = "1.0.43"
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"], version = "1.29.1" }
tokio-postgres = { default-features = false, features = ["with-time-0_3"], version = "0.7.8" }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { features = ["builder", "permission-calculator"], version = "0.15.2" }
twilight-validate = "0.15.1"

[package]
edition = "2021"
name = "seed"
version = "0.1.0"