[dependencies]
deadpool-postgres = "0.10.5"
dotenv = "0.15.0"
futures = { version = "0.3", default-features = false }
http = "0.2.9"
hyper = "0.14.19"
hyper-tls = "0.5.0"
image = "0.24.6"
once_cell = "1.18.0"
parking_lot = "0.12.1"
rand = { default-features = false, features = ["std_rng"], version = "0.8.5" }
serde_json = "1.0.104"
skia-safe = { version = "0.64.0" }
time = { default-features = false, version = "0.3.22" }
thiserror = "1.0.43"
thousands = "0.2.0"
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"], version = "1.29.1" }
tokio-postgres = { default-features = false, features = ["with-time-0_3"], version = "0.7.8" }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { features = ["builder", "permission-calculator"], version = "0.15.2" }
twilight-validate = "0.15.1"

[package]
edition = "2021"
name = "seed"
version = "0.1.0"